kubernetes/system/tapy/components/postgres/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tapy-postgres
spec:
  podSelector:
    matchLabels: {app: tapy, component: postgres}
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector:
            matchLabels: {app: tapy, component: api}
        - podSelector:
            matchLabels: {app: tapy, component: worker}
      ports: [{port: 5432, protocol: TCP}]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tapy-to-postgres
spec:
  podSelector:
    matchLabels: {app: tapy, component: api}
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector:
            matchLabels: {app: tapy, component: postgres}
      ports: [{port: 5432, protocol: TCP}]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: tapy-to-postgres-worker
spec:
  podSelector:
    matchLabels: {app: tapy, component: worker}
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector:
            matchLabels: {app: tapy, component: postgres}
      ports: [{port: 5432, protocol: TCP}]
